chore: fix avatar style error on ie

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -50,6 +50,7 @@
 
   & img {
     max-width: 100%;
+    max-height: 100%;
     border-radius: 50%;
   }
 }
